@@ -1,4 +1,4 @@
-export(asEuclidean, asHomogeneous, axes3d, axis3d, box3d,
+export(asEuclidean, asHomogeneous, aspect3d, axes3d, axis3d, box3d,
         bbox3d, bg3d, clear3d, cube3d, dot3d,
 	identityMatrix,
 	light3d, lines3d, material3d, mtext3d, 
