@@ -1,0 +1,32 @@
+\name{aspect3d}
+\alias{aspect3d}
+\title{Set the aspect ratios of the current plot}
+\description{
+This function sets the apparent ratios of the x, y, and z axes
+of the current bounding box.
+}
+\usage{
+aspect3d(x, y = NULL, z = NULL)
+}
+%- maybe also 'usage' for other objects documented here.
+\arguments{
+  \item{x}{The ratio for the x axis, or all three ratios }
+  \item{y}{The ratio for the y axis }
+  \item{z}{The ratio for the z axis }
+}
+\details{
+If the ratios are all 1, the bounding box will be displayed as a cube approximately filling the display.
+Values may be set larger or smaller as desired.
+
+This function works by modifying the \code{\link[par3d]{userMatrix}} to adjust the \code{modelMatrix}.
+}
+\value{
+The previous value of the \code{\link[par3d]{userMatrix}} is returned.
+}
+\author{Duncan Murdoch}
+\seealso{\code{\link{plot3d}}}
+\examples{
+  plot3d(rnorm(100), rnorm(100, sd=10), rnorm(100))
+  aspect3d(1,1,0.5)
+}
+\keyword{dynamic}
